--- a/index.html
+++ b/index.html
@@ -7,49 +7,72 @@
     <link rel="stylesheet" href="esquadriasstyle.css">
 </head>
 <body>
-    <header>
-        <img src="Logo_1.png" alt="logo" class="logo01">
-        <nav>
-            <a href="#">Home</a>
-            <a href="#">Contato</a>
-            <a href="#">Localizações</a>
-            <a href="#">Carreira</a>
-        </nav>
-    </header>
-
-
-
-        <div class="start01">
-                    <img src="Fachada1.png" alt="Fachada" class="imgFachada">
-            <aside>
-                <h1>Nossa História</h1>
-                <p>
-                    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Fundada em 2015, a <strong>ArchLine</strong> Esquadrias nasceu com o propósito de transformar portas e janelas em soluções modernas, seguras e elegantes para residências e empresas. Desde o início, buscamos unir design contemporâneo com qualidade superior, sempre colocando a satisfação do cliente no centro de cada projeto.
-                    <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Com o crescimento da confiança em nosso trabalho, em 2020 expandimos nossas operações e inauguramos 3 novas filiais estratégicas, levando nossos produtos e serviços para diferentes regiões.
-                    <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Hoje, contamos com uma equipe de mais de 80 colaboradores especializados, que atuam com dedicação e conhecimento técnico em cada etapa — do atendimento personalizado à instalação final.
-                    <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Nosso compromisso é simples: entregar esquadrias que valorizam os espaços, aumentam o conforto e proporcionam segurança, sempre acompanhando as tendências do setor e mantendo a inovação como pilar central.
-                    <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Na <strong>ArchLine </strong>Esquadrias, cada linha traçada é uma ponte entre a sua ideia e a realização do seu espaço.
-                </p>
-            </aside>
-
-            <h1 class="servicosTitle">Servicos</h1>
-            <div class="psm">
-                <h2>Projetos Sobre Medida</h2>
-                <p>Desenvolvemos esquadrias personalizadas em alumínio, vidro e PVC, adaptadas ao estilo de cada cliente. Desde janelas panorâmicas até portas de correr modernas, entregamos soluções que unem estética e funcionalidade.</p>
+  
+        <header>
+            <div class="desktopOnly">
+                <div class="topHeader">
+                    <p>Selecione a Loja:</p>
+                    <a href="#">Santa Catarina |</a>
+                    <a href=""> Rio Grande do Sul (Caxias) |</a>
+                    <a href=""> Rio Grande do Sul (Passo Fundo)</a>
+                </div>
             </div>
-
-            <div class="ime">    
-                <h2>Instalação e Manutenção Especializada</h2>
-                <p>Nossa equipe técnica garante uma instalação precisa e segura, além de oferecer planos de manutenção preventiva e corretiva, aumentando a durabilidade e o desempenho das esquadrias.</p>
-            </div>    
-
-            <div class="cda">
-                <h2>Consultoria em Desing Arquitetônico</h2>
-                <p>Auxiliamos arquitetos, engenheiros e clientes finais na escolha de modelos, cores e acabamentos, garantindo que as esquadrias se integrem de forma harmoniosa e sofisticada aos projetos.</p>
+            <div class="SeccondHeader">
+                <img src="Logo_1.png" alt="logo" class="logo01">
+                <nav>
+                    <a href="#">Home - </a>
+                    <a href="#">Contato - </a>
+                    <a href="#">Localizações - </a>
+                    <a href="#">Carreira</a>
+                </nav>
             </div>
+        </header>
 
-            <div class="depoimentos">
-            </div>  
+
+    <section class="nossaHistoria">
+        <h1>Nossa História</h1>
+        <img src="fachada_grande.png" alt="Fachada Loja" class="fachadaimg">
+        <p>
+            &nbsp;&nbsp;&nbsp;&nbsp;Fundada em 2015, a <strong>ArchLine</strong> Esquadrias nasceu com o propósito de transformar portas e janelas em soluções modernas, seguras e elegantes para residências e empresas. Desde o início, buscamos unir design contemporâneo com qualidade superior, sempre colocando a satisfação do cliente no centro de cada projeto.
+            <br>&nbsp;&nbsp;&nbsp;&nbsp;Com o crescimento da confiança em nosso trabalho, em 2020 expandimos nossas operações e inauguramos 3 novas filiais estratégicas, levando nossos produtos e serviços para diferentes regiões.
+            <br>&nbsp;&nbsp;&nbsp;&nbsp;Hoje, contamos com uma equipe de mais de 80 colaboradores especializados, que atuam com dedicação e conhecimento técnico em cada etapa — do atendimento personalizado à instalação final.
+            <br>&nbsp;&nbsp;&nbsp;&nbsp;Nosso compromisso é simples: entregar esquadrias que valorizam os espaços, aumentam o conforto e proporcionam segurança, sempre acompanhando as tendências do setor e mantendo a inovação como pilar central.
+            <br>&nbsp;&nbsp;&nbsp;&nbsp;Na <strong>ArchLine </strong>Esquadrias, cada linha traçada é uma ponte entre a sua ideia e a realização do seu espaço.
+        </p>
+    </section>
+
+    <section class="servicosWhole">
+        <h1 class="servicosTitle">Servicos</h1>
+        <div class="psm">
+            <h2>Projetos Sobre Medida</h2>
+            <p>Desenvolvemos esquadrias personalizadas em alumínio, vidro e PVC, adaptadas ao estilo de cada cliente. Desde janelas panorâmicas até portas de correr modernas, entregamos soluções que unem estética e funcionalidade.</p>
+            <img src="psm_image.png" alt="Imagem de Projetos" class="psm_image">
         </div>
+
+        <div class="ime">    
+            <h2>Instalação e Manutenção Especializada</h2>
+            <p>Nossa equipe técnica garante uma instalação precisa e segura, além de oferecer planos de manutenção preventiva e corretiva, aumentando a durabilidade e o desempenho das esquadrias.</p>
+            <img src="ime_image.png" alt="Imagem de Manutencao" class="ime_image">
+        </div>    
+
+        <div class="cda">
+            <h2>Consultoria em Desing Arquitetônico</h2>
+            <p>Auxiliamos arquitetos, engenheiros e clientes finais na escolha de modelos, cores e acabamentos, garantindo que as esquadrias se integrem de forma harmoniosa e sofisticada aos projetos.</p>
+            <img src="cda_image.png" alt="Imagem de Manutencao" class="cda_image">
+        </div>
+    </section>
+
+        <section class="depoimentos">
+            <h1>Confira o que os nossos Clientes reportam!</h1>
+
+            <div class>
+                <h3>Renata Lima</h3>
+                <p>Fiquei muito contente com a esquadria, o acabamento tá muito bonito e combina super bem com o restante da casa. A vedação contra vento e barulho é ótima, a gente percebe a diferença logo que fecha a janela. O material parece bem resistente e ao mesmo tempo fácil de limpar, não dá aquele trabalho todo que eu imaginava. Acho que acertei na escolha, recomendo pra quem quer algo bonito e pratico.</p>
+            </div>
+
+        </section>  
+
+
+
 </body>
 </html>
